fix: checkbox/radio groups should not overlap with other clickable content (#998)

--- a/packages/veui-theme-dls/components/checkbox-group.less
+++ b/packages/veui-theme-dls/components/checkbox-group.less
@@ -9,6 +9,7 @@
     align-items: center;
     margin-left: -@dls-checkbox-group-spacing;
     margin-top: -@dls-checkbox-group-row-gap;
+    pointer-events: none;
   }
 
   .@{veui-prefix}-radio,
@@ -16,5 +17,6 @@
     flex: none;
     margin-left: @dls-checkbox-group-spacing;
     margin-top: @dls-checkbox-group-row-gap;
+    pointer-events: all;
   }
 }
